# gvishual

./: CMakeLists.txt  README.md
doxygen/: Doxyfile
src/: CMakeLists.txt  edgewidget.cpp  edgewidget.h  edgewidget.ui  graphcreator.cpp  graphcreator.h  graphcreator.ui  graphwidget.cpp  graphwidget.h  graphwidget.ui  main.cpp
src/resources/: res.qrc
